--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "url-loader": "^1.1.2",
     "uuid": "^3.3.3",
     "webpack": "^4.41.5",
-    "xml2js": "^0.4.22"
+    "xml2js": "^0.4.22",
+    "xss-escape": "0.0.6"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
